--- a/SupervisedCNN.ipynb
+++ b/SupervisedCNN.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_acc = 1e9\n",
+    "best_rmse = 1e9\n",
     "N_b2=len(H_Train) #Train Size\n",
     "N_b3=len(H_Val) #Val Size\n",
     "bs2 = 32 #Batch Size\n",
@@ -169,7 +169,7 @@
    "outputs": [],
    "source": [
     "for i in range(1,151):\n",
-    "    loss, acc = 0, 0\n",
+    "    loss, rmse = 0, 0\n",
     "    iters_per_epoch = 0\n",
     "    ''' Training'''\n",
     "    for k in range(0,N_b2,bs2):\n",
@@ -187,21 +187,21 @@
     "            pred = model(h)\n",
     "            iloss = criterion(pred, pos)\n",
     "            loss += iloss.item()\n",
-    "            iacc = torch.dist(pred, pos, 2) / pred.shape[0]\n",
-    "            acc += iacc.item()\n",
+    "            irmse = torch.dist(pred, pos, 2) / pred.shape[0]\n",
+    "            rmse += irmse.item()\n",
     "\n",
     "            '''BackProp'''\n",
     "            iloss.backward()\n",
     "            optimizer.step()\n",
     "            if iters_per_epoch % 10 == 0:\n",
-    "                print(f'Batch {iters_per_epoch}/{N_b2/bs2}: loss = {iloss:.4f} acc = {iacc:.4f}')\n",
+    "                print(f'Batch {iters_per_epoch}/{N_b2/bs2}: loss = {iloss:.4f} rmse = {irmse:.4f}')\n",
     "\n",
     "    loss /= iters_per_epoch\n",
-    "    acc /= iters_per_epoch\n",
+    "    rmse /= iters_per_epoch\n",
     "    print(k)\n",
-    "    print(f'Epoch {i}/{100}: loss = {loss:.4f} acc = {acc:.4f}')\n",
+    "    print(f'Epoch {i}/{100}: loss = {loss:.4f} rmse = {rmse:.4f}')\n",
     " \n",
-    "    loss, acc = 0, 0\n",
+    "    loss, rmse = 0, 0\n",
     "    iters_per_epoch = 0\n",
     "\n",
     "    ''' Validation'''\n",
@@ -215,14 +215,14 @@
     "                pred = model(h)\n",
     "                iloss = criterion(pred, pos)\n",
     "                loss += iloss.item()\n",
-    "                iacc = torch.dist(pred, pos, 2) / pred.shape[0]\n",
-    "                acc += iacc.item()\n",
-    "    acc/=iters_per_epoch\n",
+    "                irmse = torch.dist(pred, pos, 2) / pred.shape[0]\n",
+    "                rmse += irmse.item()\n",
+    "    rmse/=iters_per_epoch\n",
     "    loss/=iters_per_epoch\n",
-    "    print(f'Validation , loss = {loss:.4f} acc = {acc:.4f}')\n",
-    "    if(acc<=best_acc):\n",
+    "    print(f'Validation , loss = {loss:.4f} rmse = {rmse:.4f}')\n",
+    "    if(rmse<=best_rmse):\n",
     "        torch.save(model.state_dict(), \"best.pt\")\n",
-    "        best_acc = acc\n",
+    "        best_rmse = rmse\n",
     "    \n",
     "   \n",
     "    '''Testing'''\n",
@@ -230,7 +230,7 @@
     "        model2 = CNN().to(device)\n",
     "        model2.load_state_dict(torch.load(\"best.pt\",map_location=torch.device('cpu') )) \n",
     "        iters_per_epoch = 0\n",
-    "        loss, acc = 0, 0\n",
+    "        loss, rmse = 0, 0\n",
     "        pos_p = torch.zeros(Pos_Test.shape)\n",
     "        for k in range(0,N_b4,bs2):\n",
     "            iters_per_epoch +=1    \n",
@@ -241,13 +241,12 @@
     "                    pred = model2(h)\n",
     "                    iloss = criterion(pred, pos)\n",
     "                    loss += iloss.item()\n",
-    "                    iacc = torch.dist(pred, pos, 2) / pred.shape[0]\n",
-    "                    acc += iacc.item()\n",
+    "                    irmse = torch.dist(pred, pos, 2) / pred.shape[0]\n",
+    "                    rmse += irmse.item()\n",
     "                    pos_p[k:end]=pred\n",
-    "        acc/=iters_per_epoch\n",
-    "        loss/=iters_per_epoch\n",
-    "        mde = torch.mean(torch.sqrt(torch.sum((pos_p-Pos_Test)**2 , dim=1))) \n",
-    "        print(f'Test , loss = {loss:.4f} acc = {acc:.4f}  mde = {mde:.4f}')"
+    "        rmse/=iters_per_epoch\n",
+    "        loss/=iters_per_epoch \n",
+    "        print(f'Test , loss = {loss:.4f} rmse = {rmse:.4f}')"
    ]
   }
  ],
